LU-6060 lnet: set downis to 1 if there's no NI for remote net

lnet_route_t::lr_downis is marked as zero even if there is no NI to
target network, this is wrong and breaks logic of ARF. This patch
fixes this problem.

Signed-off-by: Liang Zhen <liang.zhen@intel.com>
Change-Id: I7831e258d0098e2a4bee650e69bb4f1a12429f46
Reviewed-on: http://review.whamcloud.com/13417
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: James Simmons <uja.ornl@gmail.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>