lnet/lnet/router.c
@@ -687,6 +687,11 @@ lnet_parse_rc_info(lnet_rc_data_t *rcd)
 			rtr->lr_downis = 0;
 			continue;
 		}
+		/* if @down is zero and this route is single-hop, it means
+		 * we can't find NI for target network */
+		if (down == 0 && rtr->lr_hops == 1)
+			down = 1;
+
 		rtr->lr_downis = down;
 	}
 }
